api for wallet, transactions, blockchain...
