# src/models/transaction/Transaction.ts
@@ -1,5 +1,9 @@
+import { SHA256 } from "crypto-js";
 import TxIn from "./TxIn";
 import TxOut from "./TxOut";
+import { ec as EC } from "elliptic";
+
+const ec = new EC("secp256k1");
 import crypto from "crypto";
 
 class Transaction {
@@ -7,7 +11,7 @@ class Transaction {
   txIns: TxIn[];
   txOuts: TxOut[];
 
-  constructor(txIns: TxIn[], txOuts: TxOut[]) {
+  constructor({ txIns, txOuts }: { txIns: TxIn[]; txOuts: TxOut[] }) {
     this.id = this.generateId();
     this.txIns = txIns;
     this.txOuts = txOuts;
@@ -16,6 +20,19 @@ class Transaction {
   private generateId(): string {
     const data = JSON.stringify(this);
     return crypto.createHash("sha256").update(data).digest("hex");
+  }
+
+  calculateHash(): string {
+    return SHA256(
+      this.txIns.map((txIn) => txIn.txOutId + txIn.txOutIndex).join("") +
+        this.txOuts.map((txOut) => txOut.address + txOut.amount).join("")
+    ).toString();
+  }
+
+  signTransaction(privateKey: string): void {
+    const key = ec.keyFromPrivate(privateKey);
+    const signature = key.sign(this.calculateHash(), "base64");
+    this.txIns[0].signature = signature.toDER("hex");
   }
 
   static validateStructure(transaction: Transaction): boolean {
