# src/routes/index.ts
@@ -1,3 +1,4 @@
 import WalletRouter from "./wallet.route";
 import BlockchainRouter from "./blockchain.route";
-export { WalletRouter, BlockchainRouter };
+import TransactionRouter from "./transaction.route";
+export { WalletRouter, BlockchainRouter, TransactionRouter };
